--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "moment": "^2.22.1",
     "mysql": "^2.15.0",
     "mysql2": "^1.5.3",
+    "node-mysql": "^0.4.2",
     "require": "^2.4.20",
     "uuid": "^3.2.1"
   },
